// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: branch with number of days 1`] = `
<tr>
  <td
    className="nowrap"
  >
    <BranchLikeIcon
      branchLike={
        {
          "analysisDate": "2018-01-01",
          "excludedFromPurge": true,
          "isMain": false,
          "name": "branch-6.7",
          "newCodePeriod": {
            "type": "NUMBER_OF_DAYS",
            "value": "21",
          },
        }
      }
      className="little-spacer-right"
    />
    branch-6.7
  </td>
  <td
    className="huge-spacer-right nowrap"
  >
    <Tooltip>
      <span>
        baseline.number_days: 21
      </span>
    </Tooltip>
  </td>
  <td
    className="text-right"
  >
    <ActionsDropdown>
      <ActionsDropdownItem
        onClick={[Function]}
      >
        edit
      </ActionsDropdownItem>
      <ActionsDropdownItem
        onClick={[Function]}
      >
        reset_to_default
      </ActionsDropdownItem>
    </ActionsDropdown>
  </td>
</tr>
`;

exports[`should render correctly: branch with previous version 1`] = `
<tr>
  <td
    className="nowrap"
  >
    <BranchLikeIcon
      branchLike={
        {
          "analysisDate": "2018-01-01",
          "excludedFromPurge": true,
          "isMain": false,
          "name": "branch-6.7",
          "newCodePeriod": {
            "type": "PREVIOUS_VERSION",
          },
        }
      }
      className="little-spacer-right"
    />
    branch-6.7
  </td>
  <td
    className="huge-spacer-right nowrap"
  >
    <Tooltip>
      <span>
        baseline.previous_version
      </span>
    </Tooltip>
  </td>
  <td
    className="text-right"
  >
    <ActionsDropdown>
      <ActionsDropdownItem
        onClick={[Function]}
      >
        edit
      </ActionsDropdownItem>
      <ActionsDropdownItem
        onClick={[Function]}
      >
        reset_to_default
      </ActionsDropdownItem>
    </ActionsDropdown>
  </td>
</tr>
`;

exports[`should render correctly: branch with reference branch 1`] = `
<tr>
  <td
    className="nowrap"
  >
    <BranchLikeIcon
      branchLike={
        {
          "analysisDate": "2018-01-01",
          "excludedFromPurge": true,
          "isMain": false,
          "name": "branch-6.7",
          "newCodePeriod": {
            "type": "REFERENCE_BRANCH",
            "value": "master",
          },
        }
      }
      className="little-spacer-right"
    />
    branch-6.7
  </td>
  <td
    className="huge-spacer-right nowrap"
  >
    <Tooltip>
      <span>
        baseline.reference_branch: master
      </span>
    </Tooltip>
  </td>
  <td
    className="text-right"
  >
    <ActionsDropdown>
      <ActionsDropdownItem
        onClick={[Function]}
      >
        edit
      </ActionsDropdownItem>
      <ActionsDropdownItem
        onClick={[Function]}
      >
        reset_to_default
      </ActionsDropdownItem>
    </ActionsDropdown>
  </td>
</tr>
`;

exports[`should render correctly: branch with specific analysis 1`] = `
<tr>
  <td
    className="nowrap"
  >
    <BranchLikeIcon
      branchLike={
        {
          "analysisDate": "2018-01-01",
          "excludedFromPurge": true,
          "isMain": false,
          "name": "branch-6.7",
          "newCodePeriod": {
            "effectiveValue": "2018-12-02T13:01:12",
            "type": "SPECIFIC_ANALYSIS",
            "value": "A85835",
          },
        }
      }
      className="little-spacer-right"
    />
    branch-6.7
  </td>
  <td
    className="huge-spacer-right nowrap"
  >
    <Tooltip>
      <span>
        baseline.specific_analysis: 
        <DateTimeFormatter
          date="2018-12-02T13:01:12"
        />
      </span>
    </Tooltip>
  </td>
  <td
    className="text-right"
  >
    <ActionsDropdown>
      <ActionsDropdownItem
        onClick={[Function]}
      >
        edit
      </ActionsDropdownItem>
      <ActionsDropdownItem
        onClick={[Function]}
      >
        reset_to_default
      </ActionsDropdownItem>
    </ActionsDropdown>
  </td>
</tr>
`;

exports[`should render correctly: faulty branch 1`] = `
<tr
  className="branch-setting-warning"
>
  <td
    className="nowrap"
  >
    <BranchLikeIcon
      branchLike={
        {
          "analysisDate": "2018-01-01",
          "excludedFromPurge": true,
          "isMain": false,
          "name": "branch-7.3",
        }
      }
      className="little-spacer-right"
    />
    branch-7.3
  </td>
  <td
    className="huge-spacer-right nowrap"
  >
    <Tooltip
      overlay="baseline.reference_branch.invalid_branch_setting.branch-7.3"
    >
      <span>
        <WarningIcon
          className="little-spacer-right"
        />
        branch_list.default_setting
      </span>
    </Tooltip>
  </td>
  <td
    className="text-right"
  >
    <ActionsDropdown>
      <ActionsDropdownItem
        onClick={[Function]}
      >
        edit
      </ActionsDropdownItem>
    </ActionsDropdown>
  </td>
</tr>
`;

exports[`should render correctly: main branch with default 1`] = `
<tr>
  <td
    className="nowrap"
  >
    <BranchLikeIcon
      branchLike={
        {
          "analysisDate": "2018-01-01",
          "excludedFromPurge": true,
          "isMain": true,
          "name": "master",
        }
      }
      className="little-spacer-right"
    />
    master
    <div
      className="badge spacer-left"
    >
      branches.main_branch
    </div>
  </td>
  <td
    className="huge-spacer-right nowrap"
  >
    <Tooltip>
      <span>
        branch_list.default_setting
      </span>
    </Tooltip>
  </td>
  <td
    className="text-right"
  >
    <ActionsDropdown>
      <ActionsDropdownItem
        onClick={[Function]}
      >
        edit
      </ActionsDropdownItem>
    </ActionsDropdown>
  </td>
</tr>
`;
